+ seq, par, title->no-idx fun, title link

--- a/resources/public/css/ui.css
+++ b/resources/public/css/ui.css
@@ -65,3 +65,15 @@ col.struct {
 col.no-idx {
     width:100px;
 }
+
+col.no-idx {
+    width:100px;
+}
+
+col.seq-idx {
+    width:10px;
+}
+
+col.par-idx {
+    width:10px;
+}
